LPS-77183 Add new language entries

--- a/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language.properties
+++ b/modules/apps/foundation/users-admin/users-admin-api/src/main/resources/content/Language.properties
@@ -2,6 +2,9 @@ check-token=Check Image Token
 maximum-file-size=Maximum File Size
 maximum-height=Maximum Height
 maximum-width=Maximum Width
+organizations-types=Organizations Types
+organizations-types-configuration-name=Organizations Types
+organizations-types-help=Set this JSON object to change the organizations types. Add a new property to the JSON object to create a new organization type.
 use-initials-for-default-user-portrait=Use Initials For Default User Portrait
 use-initials-for-default-user-portrait-help=Set this to true to use the user's initials as the default user portrait. Otherwise, the default portrait image files will be used. The default portrait image path can be set via the properties "image.default.user.male.portrait" and "image.default.user.female.portrait" in portal.properties.
 user-file-uploads-configuration-name=User Images
