--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -136,7 +136,8 @@
     # Input a list of comma delimited upgrade paths that are allowed to call
     # ServiceUtil methods. See LPS-34911.
     #
-    upgrade.service.util.excludes=
+    upgrade.service.util.excludes=\
+        portal-impl/src/com/liferay/portal/upgrade/v7_0_3/UpgradeOrganization.java
 
 ##
 ## Git
