--- a/modules/apps/foundation/organizations/organizations-service/build.gradle
+++ b/modules/apps/foundation/organizations/organizations-service/build.gradle
@@ -1,3 +1,5 @@
+task deployConfigs(type: Copy)
+
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
 
@@ -11,4 +13,17 @@ dependencies {
 	provided group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 	provided group: "org.osgi", name: "org.osgi.service.cm", version: "1.5.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
+}
+
+deploy {
+	finalizedBy deployConfigs
+}
+
+deployConfigs {
+	ext {
+		autoClean = false
+	}
+
+	from "configs"
+	into new File(liferay.liferayHome, "osgi/configs")
 }
