--- a/modules/apps/foundation/frontend-js/frontend-js-web/package.json
+++ b/modules/apps/foundation/frontend-js/frontend-js-web/package.json
@@ -23,15 +23,21 @@
 		"metal-component": "^2.5.13",
 		"metal-dom": "^2.5.13",
 		"metal-events": "^2.5.16",
+		"metal-promise": "^3.0.3",
 		"metal-soy": "^2.16.4",
 		"svg4everybody": "^2.1.8"
 	},
 	"devDependencies": {
+		"babel-loader": "^7.1.2",
 		"babel-preset-env": "^1.6.0",
 		"jest": "^20.0.4",
 		"liferay-jest-junit-reporter": "0.0.3",
 		"liferay-module-config-generator": "^1.2.1",
-		"metal-cli": "^4.0.1"
+		"metal-cli": "^4.0.1",
+		"uglifyjs-webpack-plugin": "^1.1.8",
+		"webpack": "^3.10.0",
+		"webpack-dev-server": "^2.11.1",
+		"webpack-merge": "^4.1.1"
 	},
 	"jest": {
 		"globals": {
@@ -52,7 +58,10 @@
 		"format": "npm run csf -- -i",
 		"lint": "eslint src/**/*.es.js test/**/*.es.js",
 		"prettier": "prettier-eslint src/**/*.es.js test/**/*.es.js",
-		"test": "jest"
+		"start": "webpack-dev-server --config webpack.dev.js",
+		"test": "jest",
+		"webpack": "webpack --config webpack.prod.js",
+		"webpack:dev": "webpack --config webpack.dev.js"
 	},
 	"version": "1.0.70"
 }
