--- a/modules/apps/foundation/configuration-admin/configuration-admin-web/src/main/resources/content/Language.properties
+++ b/modules/apps/foundation/configuration-admin/configuration-admin-web/src/main/resources/content/Language.properties
@@ -1,3 +1,56 @@
+category-set.commerce=Commerce
+category-set.content-management=Content Management
+category-set.other=Other
+category-set.platform=Platform
+category-set.security=Security
+category-set.social=Social
+category.adaptive-media=Adaptive Media
+category.api-authentication=API Authentication
+category.assets=Assets
+category.auto-login=Auto Login
+category.blogs=Blogs
+category.breadcrumbs=Breadcrumbs
+category.captcha=CAPTCHA
+category.chat=Chat
+category.connectors=Connectors
+category.display-content=Display Content
+category.documents-and-media=Documents and Media
+category.dynamic-data-lists=Dynamic Data Lists
+category.dynamic-data-mapping=Dynamic Data Mapping
+category.file-storage=File Storage
+category.forms=Forms
+category.frontend-infrastructure=Frontend Infrastructure
+category.general=General
+category.infrastructure=Infrastructure
+category.knowledge-base=Knowledge Base
+category.ldap=LDAP
+category.localization=Localization
+category.messaging=Messaging
+category.mobile-and-devices=Mobile and devices
+category.module-container=Module Container
+category.navigation=Navigation
+category.open-id=OpenID
+category.other=Other
+category.page-administration=Page Administration
+category.push-notifications=Push Notifications
+category.rss=RSS
+category.scripting-engines=Scripting Engines
+category.search=Search
+category.security=Security
+category.shopping=Shopping
+category.social-networks=Social Networks
+category.sso=SSO
+category.template-engines=Template Engines
+category.third-party=Third Party
+category.tools=Tools
+category.upgrades=Upgrades
+category.user-activity=User Activity
+category.users=Users
+category.web-api=Web API
+category.web-content=Web Content
+category.wiki=Wiki
+category.workflow=Workflow
+category.xsl-content=XSL Content
 collaboration=Collaboration
 configuration-entries=Configuration Entries
 default-configuration-for-all-sites=Default Configuration for All Sites
@@ -12,5 +65,9 @@ javax.portlet.title.com_liferay_configuration_admin_web_portlet_SystemSettingsPo
 no-configurations-were-found=No configurations were found.
 no-entries-for-x-have-been-added-yet=No entries for {0} have been added yet. Use the "Add Button" below to add the first.
 reset-default-values=Reset Default Values
+scope.company=Virtual Instance Scope
+scope.group=Site Scope
+scope.portlet-instance=Application Instances
+scope.system=System Scope
 this-configuration-was-not-saved-yet=This configuration was not saved yet. The values shown are the default.
 web-experience=Web Experience
