LRQA-35924 Add test.poshi.runer.default.namespace to test.properties

--- a/test.properties
+++ b/test.properties
@@ -1716,6 +1716,7 @@
     #test.name.skip.portal.instance=
     test.pause.on.failure=false
     test.portal.instance=false
+    test.poshi.runner.default.namespace=LocalFile
     test.poshi.runner.local.release=false
     test.poshi.runner.src.dir=modules/test/poshi-runner/poshi-runner
     #test.prepare.bundle.properties=
