--- a/modules/apps/foundation/portal-settings/portal-settings-authentication-ldap-web/build.gradle
+++ b/modules/apps/foundation/portal-settings/portal-settings-authentication-ldap-web/build.gradle
@@ -7,7 +7,6 @@ dependencies {
 	provided group: "com.liferay", name: "com.liferay.frontend.taglib", version: "2.0.0"
 	provided group: "com.liferay", name: "com.liferay.petra.lang", version: "1.0.0"
 	provided group: "com.liferay", name: "com.liferay.petra.string", version: "1.0.0"
-	provided group: "com.liferay", name: "com.liferay.portal.security.ldap", version: "2.2.0"
 	provided group: "com.liferay", name: "com.liferay.portal.settings.lang", version: "1.0.0"
 	provided group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "2.0.0"
 	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.7.0"
@@ -17,4 +16,5 @@ dependencies {
 	provided group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	provided project(":apps:foundation:portal-settings:portal-settings-api")
+	provided project(":apps:foundation:portal-security:portal-security-ldap-api")
 }
