LPS-78134 Move dynamic-data-source-spring.xml from spring.infrastructure.configs to spring.configs and add new dynamic-data-source-infrastructure-spring.xml to spring.infrastructure.configs

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -844,6 +844,8 @@
         \
         META-INF/monitoring-spring.xml,\
         \
+        #META-INF/dynamic-data-source-spring.xml,\
+        \
         classpath*:META-INF/ext-spring*.xml
 
     #
@@ -856,7 +858,7 @@
         \
         META-INF/counter-infrastructure-spring.xml,\
         \
-        #META-INF/dynamic-data-source-spring.xml,\
+        #META-INF/dynamic-data-source-infrastructure-spring.xml,\
         \
         META-INF/infrastructure-spring.xml
 
@@ -1022,7 +1024,8 @@
     # specify the data source JNDI names.
     #
     # 3. Add dynamic-data-source-spring.xml to the property
-    # "spring.infrastructure.configs".
+    # "spring.configs" and dynamic-data-source-infrastructure-spring.xml to the
+    # property "spring.infrastructure.configs"
     #
 
     #
