LPS-74375 Includes globals in the build process and avoids minifying on build because right now we have filters for that

--- a/modules/apps/foundation/frontend-js/frontend-js-web/build.gradle
+++ b/modules/apps/foundation/frontend-js/frontend-js-web/build.gradle
@@ -121,6 +121,7 @@ classes {
 	dependsOn buildLiferayAMDLoader
 	dependsOn buildLodash
 	dependsOn buildSvg4everybody
+	dependsOn npmRunWebpack
 }
 
 clean {
