--- a/modules/apps/web-experience/layout/layout-admin-web/build.gradle
+++ b/modules/apps/web-experience/layout/layout-admin-web/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	provided project(":apps:foundation:frontend-editor:frontend-editor-taglib")
 	provided project(":apps:foundation:frontend-taglib:frontend-taglib-clay")
+	provided project(":apps:foundation:portal-template:portal-template-soy-api")
 	provided project(":apps:static:portal-configuration:portal-configuration-metatype-api")
 	provided project(":apps:web-experience:asset:asset-display-api")
 	provided project(":apps:web-experience:asset:asset-taglib")
