LPS-77095 Fix Typo

--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/content/Language.properties
@@ -56,7 +56,7 @@ remove-field=Remove Field
 remove-success-page=Remove Success Page
 require=Require
 require-x=Require {0}
-required-field=Require Field
+required-field=Required Field
 reset-page=Reset Page
 rule=Rule
 rule-builder=Rule Builder
