--- a/modules/apps/foundation/portal-configuration/portal-configuration-upgrade-api/build.gradle
+++ b/modules/apps/foundation/portal-configuration/portal-configuration-upgrade-api/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.4.0"
 	provided group: "javax.portlet", name: "portlet-api", version: "2.0"
 	provided group: "org.osgi", name: "org.osgi.service.cm", version: "1.5.0"
 }
