--- a/test.properties
+++ b/test.properties
@@ -1717,6 +1717,7 @@
     test.pause.on.failure=false
     test.portal.instance=false
     test.poshi.runner.local.release=false
+    test.poshi.runner.src.dir=modules/test/poshi-runner/poshi-runner
     #test.prepare.bundle.properties=
     test.retry.command.wait.time=3
     test.run.environment=CE
