LRQA-38553 Add geckodriver properties

--- a/test.properties
+++ b/test.properties
@@ -1018,6 +1018,8 @@
     selenium.chrome.driver.version=2.16
     #selenium.desired.capabilities.platform=
     selenium.executable.dir.name=../tools/selenium/
+    selenium.gecko.driver.executable=geckodriver${file.suffix.exe}
+    selenium.gecko.driver.version=0.19.1
     selenium.ie.driver.executable=IEDriverServer.exe
     selenium.ie.driver.version=2.44
     selenium.remote.driver.enabled=false
