LPS-78208 Adds language keys

--- a/modules/apps/web-experience/fragment/fragment-item-selector-web/src/main/resources/content/Language.properties
+++ b/modules/apps/web-experience/fragment/fragment-item-selector-web/src/main/resources/content/Language.properties
@@ -1,2 +1,4 @@
 collections=Collections
 fragments=Fragments
+there-are-no-collections=There are no collections.
+there-are-no-fragments=There are no fragments.
