LPS-75462 language key for label

--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-type-text/src/main/resources/content/Language.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-type-text/src/main/resources/content/Language.properties
@@ -3,3 +3,4 @@ multiple-lines=Multiple Lines
 my-text-field-has=My text field has
 text-field-type-description=Single line or multiline text area.
 text-field-type-label=Text Field
+autocomplete-enabled=Autocomplete
