LRQA-38584 Add Rolling Restart to testray component name list in test.properties

--- a/test.properties
+++ b/test.properties
@@ -1588,6 +1588,7 @@
         Portal Services,\
         Portal Settings,\
         Roles,\
+        Rolling Restart,\
         SAML,\
         Sample Portlet Plugins,\
         Security,\
