--- a/modules/apps/web-experience/fragment/fragment-display-web/build.gradle
+++ b/modules/apps/web-experience/fragment/fragment-display-web/build.gradle
@@ -1,5 +1,8 @@
 dependencies {
 	provided group: "com.liferay", name: "com.liferay.frontend.taglib", version: "2.0.0"
+	provided group: "com.liferay", name: "com.liferay.item.selector.api", version: "2.0.0"
+	provided group: "com.liferay", name: "com.liferay.item.selector.criteria.api", version: "2.0.0"
+	provided group: "com.liferay", name: "com.liferay.petra.lang", version: "1.0.0"
 	provided group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
 	provided group: "com.liferay", name: "com.liferay.registry.api", version: "1.0.0"
 	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
@@ -9,4 +12,5 @@ dependencies {
 	provided group: "javax.servlet.jsp", name: "javax.servlet.jsp-api", version: "2.3.1"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	provided project(":apps:web-experience:fragment:fragment-api")
+	provided project(":apps:web-experience:fragment:fragment-item-selector-api")
 }
