--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language.properties
@@ -1,4 +1,5 @@
 all-fields-marked-with-x-are-required=All fields marked with {0} are required.
+autocomplete=Autocomplete
 choose-a-data-provider=Choose a Data Provider
 enter-placeholder-text=Enter placeholder text.
 enter-text-that-assists-the-user-but-is-not-submitted-as-a-field-value=Enter text that assists the user, but is not submitted as a field value.
