--- a/test.properties
+++ b/test.properties
@@ -1073,6 +1073,10 @@
 ## Test Batch
 ##
 
+    #
+    # default
+    #
+
     test.batch.app.server.tomcat.setenv.gc.new=-verbose:gc -Xloggc:/tmp/tomcat-gc.log -Xms512m -Xmx2048m -XX:MaxNewSize=32m -XX:MaxPermSize=256m -XX:MaxTenuringThreshold=0 -XX:NewSize=32m -XX:ParallelGCThreads=2 -XX:PermSize=256m -XX:+PrintGCCause -XX:+PrintGCDetails -XX:SurvivorRatio=65536 -XX:TargetSurvivorRatio=0 -XX:+UseParNewGC
     test.batch.app.server.tomcat.setenv.gc.old=-Xmx1024m -XX:MaxPermSize=384m
     test.batch.app.server.tomcat.setenv.heap.dump.path=/tmp/tomcat-oom-heap-dump.bin
@@ -1286,6 +1290,13 @@
     test.batch.size[tck-jdk8]=1
     test.batch.size[unit-jdk8]=1
     test.batch.size[wsdd-builder-jdk8]=1
+
+    #
+    # sf
+    #
+
+    test.batch.dist.app.servers[sf]=
+    test.batch.names[sf]=source-format-current-branch-jdk8
 
 ##
 ## Test Case
