--- a/test.properties
+++ b/test.properties
@@ -1074,7 +1074,7 @@
 ##
 
     #
-    # default
+    # Default
     #
 
     test.batch.app.server.tomcat.setenv.gc.new=-verbose:gc -Xloggc:/tmp/tomcat-gc.log -Xms512m -Xmx2048m -XX:MaxNewSize=32m -XX:MaxPermSize=256m -XX:MaxTenuringThreshold=0 -XX:NewSize=32m -XX:ParallelGCThreads=2 -XX:PermSize=256m -XX:+PrintGCCause -XX:+PrintGCDetails -XX:SurvivorRatio=65536 -XX:TargetSurvivorRatio=0 -XX:+UseParNewGC
@@ -1292,7 +1292,7 @@
     test.batch.size[wsdd-builder-jdk8]=1
 
     #
-    # sf
+    # Source Formatter
     #
 
     test.batch.dist.app.servers[sf]=
