LPS-77721 Moves contextual-sidebar tag to frontend-taglib

--- a/modules/apps/web-experience/layout/layout-admin-web/build.gradle
+++ b/modules/apps/web-experience/layout/layout-admin-web/build.gradle
@@ -42,5 +42,5 @@ dependencies {
 	provided project(":apps:web-experience:layout:layout-page-template-api")
 	provided project(":apps:web-experience:layout:layout-page-template-service")
 
-	soyCompile project(":apps:web-experience:layout:layout-taglib")
+	soyCompile project(":apps:foundation:frontend-taglib:frontend-taglib")
 }
