--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language.properties
@@ -4,16 +4,22 @@ add-new-pages-to-this-menu=Add New Pages to This Menu
 all-menus=All Menus
 current-main-menu-x=Current Main Menu: {0}
 current-selected-menu-x=Current Selected Menu: {0}
+do-you-want-x-to-replace-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want {0} to replace {1} as Primary Navigation? This action will affect all the pages using Primary Navigation.
 function=Function
 function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site.
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigation Menus
 main-menu=Main Menu
+mark-as=Mark As:
 menus=Menus
+navigation=Navigation
 please-add-elements=Please add elements.
 please-select-a-menu-item-to-continue=Please select a menu item to continue.
+primary-navigation=Primary Navigation
 rename-site-navigation-menu=Rename Navigation Menu
 secondary=Secondary
+secondary-navigation=Secondary Navigation
 social-menu=Social Menu
+social-navigation=Social Navigation
 subsidiary-menu=Subsidiary Menu
 the-order-of-site-navigation-menu-items-is-invalid=The order of site navigation menu items is invalid.
 the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined.
