LPS-77751 language properties

--- a/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/content/Language.properties
+++ b/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/content/Language.properties
@@ -2,6 +2,14 @@ all-ambiguous-data-was-forgotten=All ambiguous data was forgotten.
 all-data-was-anonymized=All data was anonymized.
 anonymize-data=Anonymize Data
 application-data-review=Application Data Review
+are-you-sure-you-want-to-anonymize-all-associated-entities=Are you sure you want to anonymize all associated entities?
+are-you-sure-you-want-to-anonymize-the-users-personal-data=Are you sure you want to anonymize the user's personal data?
+are-you-sure-you-want-to-anonymize-this-entity=Are you sure you want to anonymize this entity?
+are-you-sure-you-want-to-deactivate-the-user=Are you sure you want to decativate the user?
+are-you-sure-you-want-to-delete-all-associated-entities=Are you sure you want to delete all associated entities?
+are-you-sure-you-want-to-delete-the-user=Are you sure you want to delete the user?
+are-you-sure-you-want-to-delete-this-entity=Are you sure you want to delete this entity?
+are-you-sure-you-want-to-forget-the-users-personal-site=Are you sure you want to forget the user's personal site?
 auto-anonymize=Auto Anonymize
 auto-anonymize-all=Auto Anonymize All
 deactivate-user=Deactivate User
