LPS-76937 LPS-76779 ant build-lang

--- a/portal-impl/src/content/Language_sr_RS_latin.properties
+++ b/portal-impl/src/content/Language_sr_RS_latin.properties
@@ -3876,6 +3876,7 @@ request-a-new-password-reset-link=Request a new password reset link. (Automatic 
 request-holiday=Zahtev za Odmor
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
 request-pending=Request Pending (Automatic Copy)
+request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
 request-social-networking-summary-add-friend={0} želi da bude tvoj prijatelj.
 request-social-networking-summary-join-organization={0} želi da se pridruži {1}.
 request-timeout=Zahtev Pauza
@@ -5127,6 +5128,7 @@ training-credits=Krediti za Obuku
 trainings=Obuke
 transaction-id=TXN ID (Automatic Copy)
 translate=Prevedi
+translated=Translated (Automatic Copy)
 translating-web-content-to-x=Prevedi Veb Sadržaj u {0}
 translation=Translation (Automatic Copy)
 translations=Translations (Automatic Copy)
@@ -5191,6 +5193,7 @@ unscramble=Razmrsi
 unsubscribe=Odjavi se
 unsubscribe-from-comments=Razmrsi od Komentara
 untitled=Untitled (Automatic Copy)
+untranslated=Untranslated (Automatic Copy)
 untrusted=Nepouzdan
 untrusted-plugin-repositories=Neprovereni Dodatak Spremišta
 up=Iznad
@@ -6236,4 +6239,3 @@ language.uk=Ukrajinski
 language.vi=Vietnamese (Automatic Copy)
 language.zh_CN=Chinese (China) (Automatic Copy)
 language.zh_TW=Chinese (Taiwan) (Automatic Copy)
-request-social-networking-summary-add-connection={0} would like to add you as a connection. (Automatic Copy)
