--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language.properties
@@ -4,7 +4,7 @@ add-new-pages-to-this-menu=Add New Pages to This Menu
 all-menus=All Menus
 current-main-menu-x=Current Main Menu: {0}
 current-selected-menu-x=Current Selected Menu: {0}
-do-you-want-x-to-replace-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want {0} to replace {1} as Primary Navigation? This action will affect all the pages using Primary Navigation.
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation.
 function=Function
 function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site.
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigation Menus
