--- a/modules/apps/foundation/frontend-editor/frontend-editor-ckeditor-web/build.gradle
+++ b/modules/apps/foundation/frontend-editor/frontend-editor-ckeditor-web/build.gradle
@@ -105,4 +105,6 @@ dependencies {
 	provided group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	provided project(":apps:collaboration:message-boards:message-boards-api")
+	provided project(":apps:foundation:frontend-editor:frontend-editor-api")
+	provided project(":apps:foundation:frontend-editor:frontend-editor-taglib")
 }
