--- a/modules/apps/foundation/frontend-editor/frontend-editor-tinymce-web/build.gradle
+++ b/modules/apps/foundation/frontend-editor/frontend-editor-tinymce-web/build.gradle
@@ -67,6 +67,8 @@ dependencies {
 	provided group: "javax.servlet.jsp", name: "javax.servlet.jsp-api", version: "2.3.1"
 	provided group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
+	provided project(":apps:foundation:frontend-editor:frontend-editor-api")
+	provided project(":apps:foundation:frontend-editor:frontend-editor-taglib")
 
 	tinyMCE group: "org.webjars.bower", name: "tinymce", transitive: false, version: tinyMCEVersion
 }
