--- a/modules/releng.gradle
+++ b/modules/releng.gradle
@@ -214,7 +214,9 @@ prepareMajorIncrement {
 				String modulePath = moduleNamePathsMap[artifactName]
 
 				if (!modulePath) {
-					return null
+					println "Unable to find project for artifact ${artifactName}"
+
+					return dependency
 				}
 
 				return "project(\"${modulePath}\")"
