--- a/modules/releng.gradle
+++ b/modules/releng.gradle
@@ -164,7 +164,13 @@ prepareMajorIncrement {
 	description = "Prepares the build scripts of modules and portal artifacts to a major version increment."
 
 	doLast {
-		Map<String, String> moduleNamePathsMap = [:]
+		Map<String, String> moduleNamePathsMap = [
+			"com.liferay.portal.configuration.metatype": ":apps:static:portal-configuration:portal-configuration-metatype-api",
+			"com.liferay.portal.osgi.web.wab.generator": ":apps:static:portal-osgi-web:portal-osgi-web-wab-generator-api",
+			"com.liferay.portal.profile": ":apps:static:portal:portal-profile-api",
+			"com.liferay.portal.template.soy": ":apps:foundation:portal-template:portal-template-soy-api",
+			"com.liferay.portal.upgrade": ":apps:foundation:portal:portal-upgrade-api"
+		]
 
 		projectDir.traverse(
 			preDir: {
