LPS-77425 Don't replace dependencies if they aren't built during "ant all"

--- a/modules/releng.gradle
+++ b/modules/releng.gradle
@@ -225,6 +225,22 @@ prepareMajorIncrement {
 					return dependency
 				}
 
+				File lfrbuildPortalFile = new File(dir, ".lfrbuild-portal")
+
+				if (lfrbuildPortalFile.exists()) {
+					String moduleDirName = modulePath.substring(1)
+
+					File moduleDir = new File(projectDir, moduleDirName.replace(':' as char, File.separatorChar))
+
+					File moduleLfrbuildPortalFile = new File(moduleDir, ".lfrbuild-portal")
+
+					if (!moduleLfrbuildPortalFile.exists()) {
+						println "Skipping dependency from ${dir} to ${moduleDir}"
+
+						return dependency
+					}
+				}
+
 				return "project(\"${modulePath}\")"
 			}
 
