--- a/modules/apps/web-experience/export-import/export-import-service/build.gradle
+++ b/modules/apps/web-experience/export-import/export-import-service/build.gradle
@@ -4,7 +4,6 @@ targetCompatibility = "1.8"
 dependencies {
 	provided group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
 	provided group: "com.liferay", name: "com.liferay.petra.lang", version: "1.0.0"
-	provided group: "com.liferay", name: "com.liferay.petra.string", version: "1.2.0"
 	provided group: "com.liferay", name: "com.liferay.petra.xml", version: "1.0.0"
 	provided group: "com.liferay", name: "com.liferay.portal.upgrade", version: "2.0.0"
 	provided group: "com.liferay", name: "com.liferay.xstream.configurator.api", version: "2.0.0"
@@ -25,4 +24,5 @@ dependencies {
 	provided project(":apps:web-experience:layout:layout-api")
 	provided project(":apps:web-experience:site:site-api")
 	provided project(":apps:web-experience:trash:trash-api")
+	provided project(":core:petra:petra-string")
 }
