--- a/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/content/Language.properties
+++ b/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/content/Language.properties
@@ -5,7 +5,7 @@ application-data-review=Application Data Review
 are-you-sure-you-want-to-anonymize-all-associated-entities=Are you sure you want to anonymize all associated entities?
 are-you-sure-you-want-to-anonymize-the-users-personal-data=Are you sure you want to anonymize the user's personal data?
 are-you-sure-you-want-to-anonymize-this-entity=Are you sure you want to anonymize this entity?
-are-you-sure-you-want-to-deactivate-the-user=Are you sure you want to decativate the user?
+are-you-sure-you-want-to-deactivate-the-user=Are you sure you want to deactivate the user?
 are-you-sure-you-want-to-delete-all-associated-entities=Are you sure you want to delete all associated entities?
 are-you-sure-you-want-to-delete-the-user=Are you sure you want to delete the user?
 are-you-sure-you-want-to-delete-this-entity=Are you sure you want to delete this entity?
