--- a/modules/apps/collaboration/bookmarks/bookmarks-web/build.gradle
+++ b/modules/apps/collaboration/bookmarks/bookmarks-web/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	provided project(":apps:web-experience:asset:asset-taglib")
 	provided project(":apps:web-experience:export-import:export-import-changeset-api")
 	provided project(":apps:web-experience:export-import:export-import-changeset-taglib")
+	provided project(":apps:web-experience:staging:staging-api")
 	provided project(":apps:web-experience:trash:trash-api")
 	provided project(":apps:web-experience:trash:trash-taglib")
 }
