LPS-77343 switch bndrunFile to input and write to temp dir if not specified

--- a/modules/sdk/gradle-plugins-target-platform/src/gradleTest/resolveMissing/build.gradle
+++ b/modules/sdk/gradle-plugins-target-platform/src/gradleTest/resolveMissing/build.gradle
@@ -41,7 +41,7 @@ runGradleTest {
 	dependsOn resolve
 
 	doLast {
-		File bndrunFile = new File(buildDir, "resolve.bndrun")
+		File bndrunFile = new File(resolve.temporaryDir, "resolve.bndrun")
 
 		assert !bndrunFile.text.contains("com.liferay.resolve.missing;version='[1.0.0,1.0.1)")
 	}
