LPS-78576 portal-search-elasticsearch6-api: Update language keys
https://issues.liferay.com/browse/LPS-78576

--- a/modules/apps/portal-search-elasticsearch6/portal-search-elasticsearch6-api/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-search-elasticsearch6/portal-search-elasticsearch6-api/src/main/resources/content/Language.properties
@@ -9,9 +9,9 @@ bootstrap-mlockall-help=If this is checked, the process address space is locked 
 client-transport-ignore-cluster-name=Client Transport Ignore Cluster Name
 client-transport-ignore-cluster-name-help=If this is checked, the cluster name validation of connected nodes is ignored.
 client-transport-nodes-sampler-interval=Client Transport Nodes Sampler Interval
-client-transport-nodes-sampler-interval-help=Instructs the client node on how often to sample/ping the nodes listed and connected. If unset, the default Elasticsearch client.transport.nodes_sampler_interval will be used.
+client-transport-nodes-sampler-interval-help=The interval (in seconds) at which the client node samples/pings connected nodes. If unset, the default Elasticsearch client.transport.nodes_sampler_interval is used.
 client-transport-ping-timeout=Client Transport Ping Timeout
-client-transport-ping-timeout-help=Instructs the client node on the time to wait for a ping response from a node. If unset, the default Elasticsearch client.transport.ping_timeout will be used.
+client-transport-ping-timeout-help=The time (in seconds) the client node waits for a ping response from a node. If unset, the default Elasticsearch client.transport.ping_timeout is used.
 client-transport-sniff=Client Transport Sniff
 client-transport-sniff-help=If this is checked, cluster sniffing is enabled to dynamically discover available nodes in the cluster.
 cluster-name=Cluster Name
@@ -29,10 +29,6 @@ http-enabled=Http Enabled
 http-enabled-help=If this is checked, the HTTP layer is enabled. If unchecked, the HTTP layer entirely on nodes which are not meant to serve REST requests directly are disabled.
 index-name-prefix=Index Name Prefix
 index-name-prefix-help=The prefix for the search index name. This value should not be changed under normal conditions. If you change this value, you must also reindex the portal and then manually delete the old index using the Elasticsearch administration console.
-index-number-of-replicas=Index Number of Replicas
-index-number-of-replicas-help=The number of replicas to use when a Liferay index is created. If unset, no replicas will be used. If you change this value, it will be used the next time a full reindex is performed.
-index-number-of-shards=Index Number of Shards
-index-number-of-shards-help=The number of shards to use when a Liferay index is created. If unset, a single shard will be used. If you change this value, it will be used the next time a full reindex is performed.
 log-exceptions-only=Log Exceptions Only
 log-exceptions-only-help=If this is checked, logs exceptions only from Elasticsearch and does not rethrow them.
 network-bind-host=Network Bind Host
@@ -41,6 +37,10 @@ network-host=Network Host
 network-host-help=The hostname or IP address binded to the node, which is used to publish (advertise) the host to other nodes in the cluster. This is a shortcut which sets the bind host and the publish host at the same time.
 network-publish-host=Network Publish Host
 network-publish-host-help=The single interface the node advertises to other nodes in the cluster, so that those nodes can connect to it.
+number-of-index-replicas=Number of Index Replicas
+number-of-index-replicas-help=The number of replicas for each Liferay index. If unset, no replicas are used. Changes to this value take effect after a full reindex.
+number-of-index-shards=Number of Index Shards
+number-of-index-shards-help=The number of shards to use when a Liferay index is created. If unset, a single shard will be used. Changes to this value take effect after a full reindex.
 operation-mode=Operation Mode
 operation-mode-help=The REMOTE operation mode connects to a remote standalone Elasticsearch cluster. The EMBEDDED operation mode starts Portal with an internal Elasticsearch instance in the same JVM. The EMBEDDED operation mode is unsupported.
 override-type-mappings=Override Type Mappings
