LPS-78493 Ignore .m2-tmp directory

--- a/source-formatter.properties
+++ b/source-formatter.properties
@@ -9,6 +9,7 @@
     source.formatter.excludes=\
         **/.cache/**,\
         **/.m2/**,\
+        **/.m2-tmp/**,\
         **/.task-cache/**,\
         **/bower_components/**,\
         **/bundles/**,\
