LPS-78493 update test

--- a/modules/sdk/gradle-plugins-lang-builder/src/gradleTest/titleCapitalization/build.gradle
+++ b/modules/sdk/gradle-plugins-lang-builder/src/gradleTest/titleCapitalization/build.gradle
@@ -25,6 +25,6 @@ runGradleTest {
 			languageProperties.load it
 		}
 
-		assert languageProperties.getProperty("add-and-customize-borders-around-this-widget") == "Add and customize borders around this widget"
+		assert languageProperties.getProperty("add-and-customize-borders-around-this-widget") == "Add and customize borders around this widget."
 	}
 }
