--- a/modules/apps/web-experience/fragment/fragment-display-web/src/main/resources/content/Language.properties
+++ b/modules/apps/web-experience/fragment/fragment-display-web/src/main/resources/content/Language.properties
@@ -1,5 +1,5 @@
 fragment-entry=Fragment Entry
 javax.portlet.title.com_liferay_fragment_display_web_portlet_FragmentEntryDisplayPortlet=Fragment Display
 select-fragment-entry=Select Fragment Entry
-select-fragment-entry-to-make-it-visible=Select Fragment Entry to make it visible
-this-application-is-not-visible-to-users-yet=This application is not visible to users yet
+select-fragment-entry-to-make-it-visible=Select a fragment entry to make it visible.
+this-application-is-not-visible-to-users-yet=This application is not visible to users yet.
