--- a/modules/apps/web-experience/fragment/fragment-display-web/build.gradle
+++ b/modules/apps/web-experience/fragment/fragment-display-web/build.gradle
@@ -2,14 +2,10 @@ dependencies {
 	provided group: "com.liferay", name: "com.liferay.frontend.taglib", version: "2.0.0"
 	provided group: "com.liferay", name: "com.liferay.item.selector.api", version: "2.0.0"
 	provided group: "com.liferay", name: "com.liferay.item.selector.criteria.api", version: "2.0.0"
-	provided group: "com.liferay", name: "com.liferay.petra.lang", version: "1.0.0"
-	provided group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
-	provided group: "com.liferay", name: "com.liferay.registry.api", version: "1.0.0"
-	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
 	provided group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "2.0.0"
 	provided group: "javax.portlet", name: "portlet-api", version: "2.0"
 	provided group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
-	provided group: "javax.servlet.jsp", name: "javax.servlet.jsp-api", version: "2.3.1"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	provided project(":apps:web-experience:fragment:fragment-api")
 	provided project(":apps:web-experience:fragment:fragment-item-selector-api")
