LPS-78616 Updates Clay to v2.0.0-rc.6

--- a/modules/apps/foundation/frontend-taglib/frontend-taglib-clay/package.json
+++ b/modules/apps/foundation/frontend-taglib/frontend-taglib-clay/package.json
@@ -16,27 +16,31 @@
 		}
 	},
 	"dependencies": {
-		"clay-alert": "2.0.0-rc.5",
-		"clay-badge": "2.0.0-rc.5",
-		"clay-button": "2.0.0-rc.5",
-		"clay-card": "2.0.0-rc.5",
-		"clay-card-grid": "2.0.0-rc.5",
-		"clay-checkbox": "2.0.0-rc.5",
-		"clay-collapse": "2.0.0-rc.5",
-		"clay-component": "2.0.0-rc.5",
-		"clay-dropdown": "2.0.0-rc.5",
-		"clay-icon": "2.0.0-rc.5",
-		"clay-label": "2.0.0-rc.5",
-		"clay-link": "2.0.0-rc.5",
-		"clay-list": "2.0.0-rc.5",
-		"clay-management-toolbar": "2.0.0-rc.5",
-		"clay-modal": "2.0.0-rc.5",
-		"clay-navigation-bar": "2.0.0-rc.5",
-		"clay-progress-bar": "2.0.0-rc.5",
-		"clay-radio": "2.0.0-rc.5",
-		"clay-select": "2.0.0-rc.5",
-		"clay-sticker": "2.0.0-rc.5",
-		"clay-table": "2.0.0-rc.5",
+		"clay-alert": "2.0.0-rc.6",
+		"clay-badge": "2.0.0-rc.6",
+		"clay-button": "2.0.0-rc.6",
+		"clay-card": "2.0.0-rc.6",
+		"clay-card-grid": "2.0.0-rc.6",
+		"clay-checkbox": "2.0.0-rc.6",
+		"clay-collapse": "2.0.0-rc.6",
+		"clay-component": "2.0.0-rc.6",
+		"clay-dataset-display": "2.0.0-rc.6",
+		"clay-dropdown": "2.0.0-rc.6",
+		"clay-icon": "2.0.0-rc.6",
+		"clay-label": "2.0.0-rc.6",
+		"clay-link": "2.0.0-rc.6",
+		"clay-list": "2.0.0-rc.6",
+		"clay-management-toolbar": "2.0.0-rc.6",
+		"clay-modal": "2.0.0-rc.6",
+		"clay-navigation-bar": "2.0.0-rc.6",
+		"clay-pagination": "2.0.0-rc.6",
+		"clay-pagination-bar": "2.0.0-rc.6",
+		"clay-portal": "2.0.0-rc.6",
+		"clay-progress-bar": "2.0.0-rc.6",
+		"clay-radio": "2.0.0-rc.6",
+		"clay-select": "2.0.0-rc.6",
+		"clay-sticker": "2.0.0-rc.6",
+		"clay-table": "2.0.0-rc.6",
 		"metal-events": "^2.16.0",
 		"metal-state": "^2.16.0"
 	},
