--- a/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language.properties
+++ b/modules/apps/web-experience/fragment/fragment-web/src/main/resources/content/Language.properties
@@ -16,6 +16,7 @@ no-toolbar-items=No Toolbar Items
 overwrite-existing-entries=Overwrite Existing Entries
 rename-fragment=Rename Fragment
 show-toolbar=Show Toolbar
+the-files-were-imported-correctly=The files were imported correctly.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=The fragment entry cannot be deleted because it is required by one or more page templates.
 there-are-no-collections=There are no collections.
 there-are-no-collections.-you-can-add-a-collection-by-clicking-the-plus-button-on-the-bottom-right-corner=There are no collections. You can add a collection by clicking the plus button on the bottom right corner.
