--- a/modules/releng.gradle
+++ b/modules/releng.gradle
@@ -166,6 +166,7 @@ prepareMajorIncrement {
 	doLast {
 		Map<String, String> moduleNamePathsMap = [
 			"com.liferay.portal.configuration.metatype": ":apps:static:portal-configuration:portal-configuration-metatype-api",
+			"com.liferay.portal.mobile.device.detection.fiftyonedegrees": ":apps:portal-mobile-device-detection-fiftyonedegrees:portal-mobile-device-detection-fiftyonedegrees-api",
 			"com.liferay.portal.osgi.web.wab.generator": ":apps:static:portal-osgi-web:portal-osgi-web-wab-generator-api",
 			"com.liferay.portal.profile": ":apps:static:portal:portal-profile-api",
 			"com.liferay.portal.template.soy": ":apps:foundation:portal-template:portal-template-soy-api",
