LPS-78674 user-associated-data-web - uses proper lang key

--- a/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/content/Language.properties
+++ b/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/content/Language.properties
@@ -1,5 +1,6 @@
 all-ambiguous-data-was-forgotten=All ambiguous data was forgotten.
 all-data-was-anonymized=All data was anonymized.
+anonymize=Anonymize
 anonymize-data=Anonymize Data
 application-data-review=Application Data Review
 are-you-sure-you-want-to-anonymize-all-associated-entities=Are you sure you want to anonymize all associated entities?
